--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -9,16 +9,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Set up Python 3.9p
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.10'
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+        pip install httpx
+        pip install pytest pytest-cov
+        
     - name: Run tests with pytest
       run: |
         pytest --cov=./ --cov-report=xml
