--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,29 +1,42 @@
 name: Python Tests
 
-on: [push, pull_request]
+on: 
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 10 
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python 3.10
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: 'pip' 
+    
+    - name: Cache Hugging Face models
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/huggingface
+        key: ${{ runner.os }}-huggingface-${{ hashFiles('requirements.txt') }}
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install httpx
-        pip install pytest pytest-cov
+        pip install httpx pytest pytest-cov
         
-    - name: Run tests with pytest
+    - name: Run fast tests
       run: |
-        pytest --cov=./ --cov-report=xml
+        pytest -m "not slow" --cov=./ --cov-report=xml
         
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+    - name: Run slow tests (only on main)
+      if: github.ref == 'refs/heads/main'
+      run: |
+        pytest -m "slow" --cov=./ --cov-append
